Closed Bug 448243 Opened 16 years ago Closed 15 years ago

"ASSERTION: stride mismatch"

Categories

(Core :: SVG, defect, P2)

x86
All
defect

Tracking

()

VERIFIED FIXED
mozilla1.9.1b3

People

(Reporter: jruderman, Assigned: roc)

References

()

Details

(4 keywords, Whiteboard: fixes 467323)

Attachments

(1 file, 1 obsolete file)

The crashtest for bug 414188 triggers:

###!!! ASSERTION: stride mismatch: 'input->mImage.mImage->Stride() == primitive->mImage.mImage->Stride()', file /Users/jruderman/central/mozilla/layout/svg/base/src/nsSVGFilterInstance.cpp, line 475

This assertion was added in bug 416305.
Flags: in-testsuite+
Assignee: nobody → roc
Flags: wanted1.9.1?
OS: Mac OS X → All
Flags: wanted1.9.1? → wanted1.9.1+
It's easy to see that this dummy image creation triggers the assertion just below it...
Attachment #352202 - Flags: superreview?(mats.palmgren)
Attachment #352202 - Flags: review?(jwatt)
Whiteboard: [needs review]
Attached patch right patchSplinter Review
Attachment #352219 - Flags: superreview?(mats.palmgren)
Attachment #352219 - Flags: review?(jwatt)
Attachment #352202 - Attachment is obsolete: true
Attachment #352202 - Flags: superreview?(mats.palmgren)
Attachment #352202 - Flags: review?(jwatt)
Comment on attachment 352219 [details] [diff] [review]
right patch

sr=mats
Attachment #352219 - Flags: superreview?(mats.palmgren) → superreview+
Comment on attachment 352219 [details] [diff] [review]
right patch

r=jwatt
Attachment #352219 - Flags: review?(jwatt) → review+
Whiteboard: [needs review] → [needs landing]
Pushed 2c8e43e57337 to trunk
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 landing]
Comment on attachment 352219 [details] [diff] [review]
right patch

Very simple, very safe fix to a potentially bad SVG regression
Attachment #352219 - Flags: approval1.9.1?
Whiteboard: [needs 191 landing] → [needs 191 approval]
Upgrading to blocking since this seems to have fixed bug 467323.
Blocks: 467323
Flags: wanted1.9.1+ → blocking1.9.1+
Whiteboard: [needs 191 approval] → [needs 191 landing]
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/b70ee33bfa88
Keywords: fixed1.9.1
Whiteboard: [needs 191 landing]
Target Milestone: --- → mozilla1.9.1b3
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.8+
(In reply to comment #6)
> Very simple, very safe fix to a potentially bad SVG regression

1.9.0.8 code-freeze is tomorrow, do we need a different patch or do you just need approval here?
Whiteboard: fixes 467323
We probably need a different patch, this code changed a lot in 1.9.1.
Flags: blocking1.9.0.8+ → blocking1.9.0.9?
Flags: blocking1.9.0.10?
verified FIXED on trunk and Shiretoko builds:

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090414 Minefield/3.6a1pre ID:20090414030735

and

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b4pre) Gecko/20090414 Shiretoko/3.5b4pre ID:20090414035212
Status: RESOLVED → VERIFIED
Flags: blocking1.9.0.12?
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.12?
Need to use a debug build to verify.
Status: VERIFIED → RESOLVED
Closed: 16 years ago15 years ago
verified FIXED on debug builds (NO assertion):

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090528 Shiretoko/3.5pre ID:20090528130303

and

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090528 Minefield/3.6a1pre ID:20090528112613
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: